syntax = "proto3";

package auth;

option go_package = "pkg/transport/grpc/dto";

import "google/protobuf/timestamp.proto";
import "pkg/transport/grpc/proto/project.proto";

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    bytes avatar_img = 4; 
    string phone = 5;
    string bio = 6;
    repeated Participant participants = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message Company {
    string id = 1;
    string name = 2;
    string codename = 3;
    int64 people_count = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    project.ProjectList projects = 7;
}


message Role {
    string name = 1;
    string company_id = 2;
    repeated string permissions = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message Participant {
    string id = 1;
    string user_id = 2;
    string company_id = 3;
    string role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}


message UserCredentials {
    string email = 1;
    string password = 2;
}

message AuthPayload {
    string session_id = 1;
    string access_token = 2;
    string refresh_token = 3; 
    User user = 4;
    int64 exp = 5;
}

// LISTS

message CompanyList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Company items = 5;
}

message UserList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated User items = 5;
}

message ParticipantList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Participant items = 5;
}

// FILTER

message UserFilter {
    int32 page = 1;
    int32 per_page = 2;
    string role = 3;
    string company_name = 4;
    string company_codename = 5;
    string company_id = 6;
    string user_id = 7;
    string user_email = 8;
    string user_name = 9;
    string user_phone = 10;
    string date_from = 11;
    string date_to = 12;
    string order_by = 13;
    string order_direction = 14;
}

message CompanyFilter {
    int32 page = 1;
    int32 per_page = 2;
    string role = 3;
    string code_name = 4;
    string company_name = 5;
    string company_id = 6;
    string user_id = 7;
    string date_from = 8;
    string date_to = 9;
    string order_by = 10;
    string order_direction = 11;
}

message ParticipantFilter {
    int32 page = 1;
    int32 per_page = 2;
    string user_id = 3;
    string company_id = 4;
    string role = 5;
    string date_from = 6;
    string date_to = 7;
    string order_by = 8;
    string order_direction = 9;
}

// CREATION

message NewUser {
    string name = 1;
    string email = 2;
    string password = 3;
    optional bytes avatar_img = 4;
}

message NewCompany {
    string name = 1;
    string codename = 2;
}

message NewRole {
    string name = 1;
    repeated string permissions = 2;
    string company_id = 3;
}

message NewParticipant {
    string user_id = 1;
    string company_id = 2;
    string role_id = 3;
}